deployments/kustomize/components/with-gateway-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sarcoma-fasttrack-api
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sarcoma-fasttrack-api/api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: sarcoma-fasttrack-api
          port: 80
    - matches:
        - path:
            type: Exact
            value: /sarcoma-fasttrack-api/health/db
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /health/db
      backendRefs:
        - group: ""
          kind: Service
          name: sarcoma-fasttrack-api
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /sarcoma-fasttrack-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: sarcoma-fasttrack-openapi-ui
          port: 80
    - matches:
        - path:
            type: Exact
            value: /sarcoma-fasttrack-openapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: sarcoma-fasttrack-api
          port: 80
